--- a/src/styles/Loading.css
+++ b/src/styles/Loading.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #edf1f4;
+  background: #F9F5F0;
   min-height: 100vh;
 }
 
@@ -18,10 +18,10 @@
   margin: 20px;
   overflow: hidden;
   border-radius: 40px;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.05), #edf1f4);
-  border: 2px solid #edf1f4;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.05), #F9F5F0);
+  border: 2px solid #F9F5F0;
   box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.1),
-    -15px -15px 20px #fff,
+    -15px -15px 20px #F7EEDB,
     inset -5px -5px 5px rgba(255, 255, 255, 0.5),
     inset 5px 5px 5px rgba(0, 0, 0, 0.05);
 }
@@ -36,7 +36,7 @@
   z-index: 10;
   border-radius: 40px;
   box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.1),
-    -15px -15px 20px #fff,
+    -15px -15px 20px #F7EEDB,
     inset -5px -5px 5px rgba(255, 255, 255, 0.5),
     inset 5px 5px 5px rgba(0, 0, 0, 0.05);
 }
@@ -44,7 +44,7 @@
 .loader div::after {
   content: "";
   position: absolute;
-  box-shadow: -5px -5px 5px rgba(0, 0, 0, 0.2), 0 420px 0 400px #2196f3;
+  box-shadow: -5px -5px 5px rgba(0, 0, 0, 0.2), 0 420px 0 400px #016BB7;
   animation: animate 2.5s ease-in-out infinite;
   transform: translateY(160px);
   animation-delay: calc(-0.5s * var(--i));
